--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ Jenkins.xcodeproj/project.xcworkspace/xcuserdata/serkanmehmetmalagic.xcuserdatad
 Jenkins.xcodeproj/xcshareddata/xcschemes/Jenkins.xcscheme
 Jenkins.xcodeproj/xcshareddata/xcschemes/JenkinsTests.xcscheme
 Jenkins.xcodeproj/xcuserdata/serkanmehmetmalagic.xcuserdatad/xcschemes/xcschememanagement.plist
+Jenkins.xcworkspace/xcuserdata/serkanmehmetmalagic.xcuserdatad/UserInterfaceState.xcuserstate
+Jenkins.xcworkspace/xcuserdata/serkanmehmetmalagic.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
